install/web/deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web

spec:
  replicas: 1
  selector:
    matchLabels:
      app: web

  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
        - image: nginx:1.22
          name: web
          ports:
            - containerPort: 80
