install/web/ing.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web

spec:
  ingressClassName: ingress-class-nginx
  rules:
    - http:
        paths:
          - path: /
            pathType: Exact
            backend:
              service:
                name: web
                port:
                  number: 80
